feat: add shuffled public-domain music playlist
Add several public-domain tunes and playlist/shuffle support to the chiptune
music module; the game now rotates through a shuffled tune list.

--- a/index.html
+++ b/index.html
@@ -615,9 +615,10 @@
                 }
 
                 musicPlayer = window.ChiptuneMusic.createPlayer({
-                    melody: window.ChiptuneMusic.melodies.twinkleTwinkle(),
+                    playlist: window.ChiptuneMusic.tunes && window.ChiptuneMusic.tunes.publicDomain ? window.ChiptuneMusic.tunes.publicDomain() : [],
+                    shufflePlaylist: true,
                     bass: window.ChiptuneMusic.bassPatterns.simple(),
-                    tempo: 120,
+                    tempo: 120, // fallback
                     volume: 0.22,
                     log: (msg) => logEvent('music', msg)
                 });
